syntax = "proto3";

import "google/protobuf/timestamp.proto";

package ayaya_collection;

service AyayaTraceCollection {
    rpc Collect (CollectRequest) returns (CollectionReply);
}

message CollectRequest {
  repeated Trace traces = 1;
}

message Trace {
    google.protobuf.Timestamp timestamp = 1;
    string username = 2;
    string groupname = 3;
    string event = 4;
    string path = 5;
    optional string path_secondary = 6;
}

message CollectionReply {
  int64  count = 1;
}
